Updates link, host paper intially

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 
             <span class="link-block">
-              <a href="https://arxiv.org/abs/2404.06425" target="_blank"
+              <a href="/static/MARBLE.pdf" target="_blank"
               class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                 <i class="ai ai-arxiv"></i>
@@ -189,7 +189,7 @@
           </span>
 
             <span class="link-block">
-              <a href="https://github.com/ttchengab/zest_code" target="_blank"
+              <a href="https://github.com/Stability-AI/marble" target="_blank"
               class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                 <i class="fab fa-github"></i>
@@ -197,6 +197,16 @@
               <span>Code</span>
             </a>
           </span>
+
+          <span class="link-block">
+            <a href="https://huggingface.co/spaces/stabilityai/marble" target="_blank"
+            class="external-link button is-normal is-rounded is-dark">
+            <span class="icon">
+              <i class="fa fa-laptop"></i>
+            </span>
+            <span>Demo</span>
+          </a>
+        </span>
 
 
           </a>
