--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 
             <span class="link-block">
-              <a href="/static/MARBLE.pdf" target="_blank"
+              <a href="https://arxiv.org/abs/2404.06425" target="_blank"
               class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                 <i class="ai ai-arxiv"></i>
@@ -189,7 +189,7 @@
           </span>
 
             <span class="link-block">
-              <a href="https://github.com/Stability-AI/marble" target="_blank"
+              <a href="https://github.com/ttchengab/zest_code" target="_blank"
               class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                 <i class="fab fa-github"></i>
@@ -197,16 +197,6 @@
               <span>Code</span>
             </a>
           </span>
-
-          <span class="link-block">
-            <a href="https://huggingface.co/spaces/stabilityai/marble" target="_blank"
-            class="external-link button is-normal is-rounded is-dark">
-            <span class="icon">
-              <i class="fa fa-laptop"></i>
-            </span>
-            <span>Demo</span>
-          </a>
-        </span>
 
 
           </a>
@@ -223,15 +213,20 @@
 <section class="hero teaser">
   <div class="container">
     <div class="hero-body">
+      <h4 class="has-text-centered">
+        <em>Control materials using pretrained generative models by just changing the CLIP embeddings!</em>
+      </h4>
+      <img src="static/images/teaser_gif.gif" alt="MARBLE Overview"/>
 
-
+      <br><br>
           <img src="static/images/teaser.jpg" alt="MARBLE Overview"/>
+<!--
+          <h2 class="subtitle has-text-centered">
+            <b>TL;DR:</b> We present MARBLE, a method for performing various material editing in images
+             such as material blending (top row) and parametric control of material properties (bottom row) leveraging
+             CLIP-space and pre-trained generative models.
+          </h2> -->
 
-      <h2 class="subtitle has-text-centered">
-        <b>TL;DR:</b> We present MARBLE, a method for performing various material editing in images
-         such as material blending (top row) and parametric control of material properties (bottom row) leveraging
-         CLIP-space and pre-trained generative models.
-      </h2>
     </div>
   </div>
 </section>
