--- a/index.html
+++ b/index.html
@@ -202,8 +202,10 @@
               <span class="link-block">
                 <a href="https://huggingface.co/spaces/stabilityai/marble" target="_blank"
                 class="external-link button is-normal is-rounded is-dark">
-
-                <span>🤗 HF Demo</span>
+                <span class="icon is-small">
+                    <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face logo" style="height: 1em;">
+                </span>
+                <span>HF Demo</span>
               </a>
             </span>
 
